--- a/css/common.css
+++ b/css/common.css
@@ -12,3 +12,13 @@ body {
   color: #212121;
   line-height: 1.5;
 }
+.gallery {
+  list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  row-gap: 48px;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+}
